<resources>
    <!-- Items Strings -->
    <string name="app_name">Travel Organizer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Travels</string>
    <string name="title_notifications">Lists</string>
    <string name="navigation_item">Items</string>
    <string name="itemAdd">Add New Item</string>
    <string name="add_item_button">Add Item Button</string>
    <string name="item_add_name">Item Name:</string>
    <string name="add_item_title">ADD ITEM</string>
    <string name="create_item">Add</string>
    <string name="add_item_name_placeholder">Add Item Name</string>
    <string name="add_item_name_label">Add item name label</string>
    <!-- Categories Strings -->

    <string name="category_name">Category Name:</string>
    <string name="travel_organizer_logo">Travel Organizer Logo</string>
    <string name="choose_category">Choose Category</string>
    <string name="choose_category_spinner">Choose Category Spinner</string>
    <string name="add_category_button">Add Category Button</string>
    <string name="new_category">New Category</string>
    <string name="no_categories_spinner">No category</string>
    <string name="add_category">ADD CATEGORY</string>
    <string name="add_category_name">Add Category Name</string>
    <string name="add_items_fragment">AddItemsFragment</string>
    <string name="category_added">Category successfully added!</string>
    <string name="item_added">Item added successfully!</string>


    <!-- List -->
    <string name="create_a_new_list">Create a New List</string>
    <string name="create_a_list">Create a List</string>
    <string name="add_list_name">Add List Name</string>
    <string name="list_name">List Name:</string>
    <string name="description">Description:</string>
    <string name="add_a_list_description">Add a list description</string>
    <string name="list_sucess">List successfully created!</string>


    <!-- Menus -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="fill_the_name">Fill the name</string>
    <string name="error_category">Error: Category don\'t added</string>
    <string name="error_item">\"Error: Item don\'t added \"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="body_list_title">Body List Title</string>
    <string name="items_added">Items Added to List</string>
    <string name="error_dont_create_relation">Error: Don\'t create the associate</string>
    <string name="item_update">Item updated Sucessfully!</string>
    <string name="delete_item">Delete Item</string>
    <string name="delte_item_msg">Are you sure you want to delete this item?</string>
    <string name="error_delete_item">Erro: Item don\'t delete</string>

    <!-- Travel -->
    <string name="add_travel">Add Travel</string>
    <string name="budget">Budget</string>
    <string name="local">Local</string>
    <string name="money_spent_on_travel">Money Spent on travel</string>
    <string name="travel_date">Travel Date</string>
    <string name="travel_name">Travel Name</string>
    <string name="choose_list_to_travel">Choose List to Travel</string>
    <string name="choose_list">Choose List</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_list">Show List</string>
    <string name="euro">€</string>
    <string name="add_item_to_list">Add Item To List</string>
    <string name="last_travels">Last Travels:</string>
    <string name="travel_delete">Delete Travel</string>
    <string name="travel_delete_msg">Are you sure want delete this Travel?</string>
    <string name="list_Delete">Delete List</string>
    <string name="list_delete_ms">Are you sure want delete this List?</string>
    <string name="new_travel">New Travel</string>
    <string name="edit_item">Edit Item</string>
</resources>