<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.travels.AddTravelFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="389dp"
                android:layout_height="584dp">

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="365dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="56dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/travel_name"
                    android:inputType="textPersonName"
                    android:textColorHint="#757575"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextBudget"
                    android:layout_width="209dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:hint="@string/budget"
                    android:inputType="numberDecimal"
                    android:textColorHint="#757575"
                    app:layout_constraintStart_toStartOf="@+id/editTextName"
                    app:layout_constraintTop_toBottomOf="@+id/editTextName"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/editTextLocal"
                    android:layout_width="365dp"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/local"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="@+id/editTextBudget"
                    app:layout_constraintTop_toBottomOf="@+id/editTextBudget" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:hint="@string/travel_date"
                    android:inputType="date"
                    android:minHeight="48dp"
                    android:textColorHint="#757575"
                    app:layout_constraintStart_toStartOf="@+id/editTextLocal"
                    app:layout_constraintTop_toBottomOf="@+id/editTextLocal"
                    android:autofillHints="" />

                <Spinner
                    android:id="@+id/travelSpinner"
                    android:layout_width="365dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/choose_list_to_travel"
                    android:spinnerMode="dialog"
                    app:layout_constraintStart_toStartOf="@+id/textViewList"
                    app:layout_constraintTop_toBottomOf="@+id/textViewList" />

                <TextView
                    android:id="@+id/textViewList"
                    android:layout_width="365dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/choose_list"
                    app:layout_constraintStart_toStartOf="@+id/editTextDate"
                    app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>