<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.travelorganizer.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_travell"
        android:name="com.example.travelorganizer.ui.travels.TravelsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_travels" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.travelorganizer.ui.lists.ListsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_lists" >
        <action
            android:id="@+id/action_navigation_list_to_createListFragment"
            app:destination="@id/navigation_createListFragment" />
        <action
            android:id="@+id/action_navigation_list_to_navigation_listBodyFragment"
            app:destination="@id/navigation_listBodyFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_item"
        android:name="com.example.travelorganizer.ui.items.ItemsFragment"
        android:label="@string/navigation_item"
        tools:layout="@layout/fragment_items" >
        <action
            android:id="@+id/action_navigation_item_to_navigation_addItemsFragment"
            app:destination="@id/navigation_addItemsFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_addItemsFragment"
        android:name="com.example.travelorganizer.ui.items.AddItemsFragment"
        android:label="fragment_add_item"
        tools:layout="@layout/fragment_add_item" >
        <action
            android:id="@+id/action_navigation_addItemsFragment_to_navigation_addCategoryFragment"
            app:destination="@id/navigation_addCategoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_addCategoryFragment"
        android:name="com.example.travelorganizer.ui.items.AddCategoryFragment"
        android:label="fragment_add_category"
        tools:layout="@layout/fragment_add_category" />
    <fragment
        android:id="@+id/navigation_createListFragment"
        android:name="com.example.travelorganizer.ui.lists.CreateListFragment"
        android:label="fragment_create_list"
        tools:layout="@layout/fragment_create_list" />
    <fragment
        android:id="@+id/navigation_listBodyFragment"
        android:name="com.example.travelorganizer.ui.lists.ListBodyFragment"
        android:label="fragment_list_body"
        tools:layout="@layout/fragment_list_body" />
</navigation>