<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lists.CreateListFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="713dp">

                <EditText
                    android:id="@+id/listNameValue"
                    android:layout_width="325dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/add_list_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textAlignment="viewStart"
                    android:textColorHint="#757575"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/listNameTextView" />

                <TextView
                    android:id="@+id/listNameTextView"
                    android:layout_width="325dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/list_name"
                    android:textAlignment="viewStart"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/descriptTextView"
                    android:layout_width="325dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/description"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/listNameValue" />

                <EditText
                    android:id="@+id/descriptionListValue"
                    android:layout_width="325dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/add_a_list_description"
                    android:inputType="textPersonName"
                    android:textColorHint="#757575"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descriptTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>