<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.travels.TravelBodyFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="674dp">

                <TextView
                    android:id="@+id/textViewBudget"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/budget"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textViewName"
                    app:layout_constraintTop_toBottomOf="@+id/textViewName" />

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="72dp"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewBudgetValue"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="@+id/textViewBudget"
                    app:layout_constraintTop_toTopOf="@+id/textViewBudget" />

                <TextView
                    android:id="@+id/textViewEuro"
                    android:layout_width="15dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="12dp"
                    android:text="@string/euro"
                    app:layout_constraintStart_toEndOf="@+id/textViewBudgetValue"
                    app:layout_constraintTop_toTopOf="@+id/textViewBudgetValue" />

                <TextView
                    android:id="@+id/textViewLocal"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/local"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textViewBudget"
                    app:layout_constraintTop_toBottomOf="@+id/textViewBudget" />

                <TextView
                    android:id="@+id/textViewLocalValue"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="@+id/textViewLocal"
                    app:layout_constraintTop_toTopOf="@+id/textViewLocal" />

                <TextView
                    android:id="@+id/textViewDateValue"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="@+id/textViewDate"
                    app:layout_constraintTop_toTopOf="@+id/textViewDate" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/travel_date"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textViewLocal"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLocal" />

                <Button
                    android:id="@+id/goList"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="92dp"
                    android:text="@string/show_list"
                    android:textColor="#757575"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="@+id/textViewDate"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDate" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>